[B]Version 2.0.4[/B]

- Fixed HTTP 404 Error on PBS Kids videos
- Fixed "object of type 'NoneType' has no len()" error
- Fixed "list indices must be integers, not str" error

[B]Version 2.0.3[/B]

- Replaced get_params with getParameters
- Fixed "No JSON object could be decoded" error
- Fixed "exceptions.TypeError" error
- Fixed retry on timeout bug
- Fixed play back issue with new PBS Kids videos

[B]Version 2.0.2[/B]

- Added separate directory for PBS Kids programs
- Fixed issue with missing videos on some programs
- Added function to select the highest video quality available (640x360 SD)
- Switched from DVDPLAYER to setResolvedUrl/IsPlayable method for video playback
- Added watched and resume capabilities
- Added function to retry on timeout and connection errors
- Added Buggalo Error Reporting
- Added most watched videos to main directory
- Switched search function to query PBS COVE API instead of video.pbs.org
- Added default view for Confluence skin

[B]Version 2.0.1[/B]

- Added more programs including PBS KIDS
- Fixed errors when playing videos
- Replaced icons and added fanart
- Added an option to allow other addons to play PBS videos 
  plugin://plugin.video.pbs?play=<video_id>

[B]Version 2.0.0[/B]

- Version bump for eden, 1.0.5 to 2.0.0

[B]Version 1.0.5[/B]

- Updated addon to use PBS COVE API service
- Updated search function
- Miscellaneous changes

[B]Version 1.0.4[/B]

- Fixed script failed error when trying to play videos
- Fixed errors when searching a term
- Fixed error after HTTP 404 dialog

[B]Version 1.0.3[/B]

- Added duration to the video listings
- Fixed video summary issue under the search menu
- Added support for HTTP 404 and HTTP 503 errors
- Video clips now start at the appropriate time

[B]Version 1.0.2[/B]

- Fixed play back error
- Updated addon icon
- Added thumbnails to folders
- Search menu now looks for videos and programs
- Programs are now indexed from http://video.pbs.org/morevideos.html
- Cleaned up code
