@@ -1,3 +1,9 @@
+[B]Version 2.0.5[/B]
+
+- Fixed duration issue in Frodo by using addStreamInfo()
+- Fixed PBS Kids backup_url error
+- Fixed issue with retries on HTTP 404 errors
+
 [B]Version 2.0.4[/B]
 
 - Fixed HTTP 404 Error on PBS Kids videos
